Errores en detalle evento. integracion de pull to reffresh

--- a/EventU/res/layout/fragment_1.xml
+++ b/EventU/res/layout/fragment_1.xml
@@ -4,17 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"      
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@android:color/transparent"
         android:dividerHeight="5dp"
         android:paddingBottom="3dp"
         android:paddingLeft="3dp"
         android:paddingRight="3dp" >
-    </ListView>
+    </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 </LinearLayout>
