-Mejora de rendimiento con carga dinamica. -Mejoras de visualizacion.

--- a/EventU/res/values/styles.xml
+++ b/EventU/res/values/styles.xml
@@ -61,6 +61,7 @@
 
     <style name="CustomTabWidgetText">
         <item name="android:background">#005f6b</item>
+        <item name="android:textColor">#fff</item>
     </style>
 
 </resources>
