--- a/EventU/res/layout/detalleevento.xml
+++ b/EventU/res/layout/detalleevento.xml
@@ -17,9 +17,18 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginTop="10dp"
+            android:text="@string/cargandoInfo"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#FFF" />
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBarGeneral"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="#343838" />
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -184,7 +193,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/crearEventoFechaDelEvento"
-                                android:textColor="#FFF"
+                                android:textColor="#fff"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
 
@@ -283,6 +292,8 @@
                     android:paddingBottom="5dp"
                     android:text="@string/noHayComentarios"
                     android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="#fff"
+                    android:textSize="20sp"
                     android:visibility="gone" />
             </LinearLayout>
 
@@ -301,7 +312,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleLarge"
+                style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
