--- a/EventU/res/layout/ver_todos_comentarios.xml
+++ b/EventU/res/layout/ver_todos_comentarios.xml
@@ -26,8 +26,8 @@
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/listComentarios"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:cacheColorHint="#00000000"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
@@ -35,11 +35,5 @@
         android:headerDividersEnabled="false"
         android:padding="3dp"
         android:smoothScrollbar="true" />
-
-    <RelativeLayout
-        android:id="@+id/textoFooter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
 
 </LinearLayout>
