--- a/EventU/res/layout/fragment_2.xml
+++ b/EventU/res/layout/fragment_2.xml
@@ -5,33 +5,6 @@
     android:background="#343838"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/txtComoVisualizar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/togOpcionMapa"
-            android:layout_marginTop="5dp"
-            android:paddingLeft="10dp"
-            android:text="@string/OpnVisualizacion"
-            android:textColor="#FFFFFF" />
-
-        <ToggleButton
-            android:id="@+id/togOpcionMapa"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@+id/txtComoVisualizar"
-            android:background="@drawable/toggle_bg_map"
-            android:checked="false"
-            android:textOff=""
-            android:textOn="" />
-    </RelativeLayout>
-
     <TableLayout
         android:id="@+id/tableRadio"
         android:layout_width="fill_parent"
@@ -41,6 +14,32 @@
 
         <TableRow
             android:id="@+id/table2Row1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/txtComoVisualizar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
+                android:text="@string/OpnVisualizacion"
+                android:textColor="#FFFFFF" />
+
+            <ToggleButton
+                android:id="@+id/togOpcionMapa"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/toggle_bg_map"
+                android:checked="false"
+                android:textOff=""
+                android:textOn="" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/table2Row2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
@@ -82,15 +81,7 @@
         android:layout_marginTop="5dp"
         android:text="@string/EventosFallido"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone" />
-
-    <ProgressBar
-        android:id="@+id/proResulCerca"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="25dp" />
+        android:visibility="gone" />    
 
     <ListView
         android:id="@+id/gridResultadosCerca"
