--- a/EventU/res/menu/main.xml
+++ b/EventU/res/menu/main.xml
@@ -7,10 +7,10 @@
         android:title="@string/action_settings"
         sgoliver:showAsAction="never"/>
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/btn_filtro_avanzado"
         android:icon="@drawable/ic_action_search"
-        android:orderInCategory="100"
         android:title="@string/action_search"
-        sgoliver:showAsAction="ifRoom"/>
+        android:visible="false"
+        sgoliver:showAsAction="ifRoom|collapseActionView"/>
 
 </menu>
